# thdocs

./: .gitignore  AGENTS.local.md  CONTEXT.md  Dockerfile  README.md  justfile  mise.toml  pyproject.toml  thdocs.toml
.github/actions/build-docs/: action.yml
.github/workflows/: build-and-publish.yml  ci.yml  publish-image.yml  publish.yml  self-publish.yml
docs/: cli.md  configuration.md  getting-started.md  index.md  kitchen-sink.md  style-guide.md  theming.md
docs/adr/: 0001-cli-wrapper-exposing-myst.md  0002-shell-as-visual-reference.md  0003-sphinx-conf-in-package.md  0004-lit-tree-with-json-data.md  0005-built-in-search.md  index.md
src/thdocs/: __main__.py  cli.py  server.py  style_guide.md
src/thdocs/sphinx/: conf.py  index_json.py  remote_images.py  toctree_json.py
src/thdocs/static/: thdocs.css  thdocs.iife.js.map  thdocs.js  thdocs.js.map
src/thdocs/theme/thdocs/: genindex.html  layout.html  page.html  thdocs-sidebar.html
tests/: test_browser.py  test_build.py  test_colon_fence.py  test_index_role.py
theme-src/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
theme-src/src/: main.css  main.ts  tree.ts
