[project]
name = "thdocs"
version = "0.1.0"
description = "A documentation site generator built on Sphinx, with a CHM-inspired theme."
requires-python = ">=3.13"
dependencies = [
    "sphinx>=7",
    "myst-parser>=3",
    "sphinx-autobuild>=2021",
]

[project.scripts]
thdocs = "thdocs.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-playwright>=0.5",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thdocs"]

[tool.hatch.build.targets.wheel.force-include]
"src/thdocs/static" = "thdocs/static"
"src/thdocs/theme" = "thdocs/theme"
"src/thdocs/sphinx" = "thdocs/sphinx"
"src/thdocs/fonts" = "thdocs/fonts"

[tool.pytest.ini_options]
testpaths = ["tests"]
